--- a/_config.yml
+++ b/_config.yml
@@ -15,10 +15,10 @@ url                      : "https://lightenit.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "Lightenit/lightenit.github.io"
 teaser                   : "/assets/images/unsplash-image-3.jpg"
-# breadcrumbs            : false # true, false (default)
-words_per_minute         : 200
+breadcrumbs              :  ture # true, false (default)
+words_per_minute         : 100
 comments:
-  provider               : # false (default), "disqus", "discourse", "facebook", "google-plus", "staticman", "custom"
+provider                 : "staticman"  # false (default), "disqus", "discourse", "facebook", "google-plus", "staticman", "custom"
   disqus:
     shortname            : # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
   discourse:
@@ -48,7 +48,7 @@ atom_feed:
   path                   : # blank (default) uses feed.xml
 
 # SEO Related
-google_site_verification :
+google_site_verification : FmD0rysAFKLJaDA1Pp4XX0skuGTxZGXwZHX7WPhvIkY
 bing_site_verification   :
 alexa_site_verification  :
 yandex_site_verification :
