--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ teaser                   : "/assets/images/unsplash-image-3.jpg"
 breadcrumbs              : ture # true, false (default)
 words_per_minute         : 20
 comments:
-  provider               : # false (default), "disqus", "discourse", "facebook", "google-plus", "staticman", "custom"
+  provider               : "staticman" # false (default), "disqus", "discourse", "facebook", "google-plus", "staticman", "custom"
   disqus:
     shortname            : # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
   discourse:
@@ -35,7 +35,7 @@ staticman:
   filename               : comment-{@timestamp}
   format                 : "yml"
   moderation             : true
-  path                   : "docs/_data/comments/{options.slug}"
+  path                   : "_data/comments/{options.slug}"
   requiredFields         : ['name', 'email' ,'message']
   transforms:
     email                : "md5"
