--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ teaser                   : "/assets/images/unsplash-image-3.jpg"
 breadcrumbs              : ture # true, false (default)
 words_per_minute         : 20
 comments:
-  provider               : "custom" # false (default), "disqus", "discourse", "facebook", "google-plus", "staticman", "custom"
+  provider               : "uyan" # false (default), "disqus", "discourse", "facebook", "google-plus", "staticman", "custom"
   disqus:
     shortname            : # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
   discourse:
